LU-7567 utils: fix timestamp printing in lfs_chagelog()

lfs_changelog() should use ".09d" when printing the fractional part
instead of ".06d" for accurate timestamps.

Change-Id: I2b219f588de688ba06b3c8cf3ccd255ed845c45e
Signed-off-by: akam kumar bharathi <azurelustre@gmail.com>