lustre/utils/lfs.c
@@ -3425,7 +3425,7 @@ static int lfs_changelog(int argc, char **argv)
 
 		secs = rec->cr_time >> 30;
 		gmtime_r(&secs, &ts);
-		printf(LPU64" %02d%-5s %02d:%02d:%02d.%06d %04d.%02d.%02d "
+		printf(LPU64" %02d%-5s %02d:%02d:%02d.%09d %04d.%02d.%02d "
 		       "0x%x t="DFID, rec->cr_index, rec->cr_type,
 		       changelog_type2str(rec->cr_type),
 		       ts.tm_hour, ts.tm_min, ts.tm_sec,
